Start of Scala + Armada work

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -238,6 +238,16 @@
       </dependencies>
     </profile>
     <profile>
+      <id>armada</id>
+      <dependencies>
+        <dependency>
+          <groupId>io.armadaproject.spark</groupId>
+          <artifactId>spark-armada_${scala.binary.version}</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>hive</id>
       <dependencies>
         <dependency>
