--- a/examples/spark-pi-executor.yaml
+++ b/examples/spark-pi-executor.yaml
@@ -12,7 +12,7 @@
             - name: SPARK_USER
               value: gbj
             - name: SPARK_DRIVER_URL
-              value: "spark://CoarseGrainedScheduler@10.244.1.47:7078"
+              value: "spark://CoarseGrainedScheduler@${IP_ADDR}:7078"
             - name: SPARK_EXECUTOR_POD_IP
               valueFrom:
                 fieldRef:
