--- a/examples/spark-pi-driver.yaml
+++ b/examples/spark-pi-driver.yaml
@@ -23,7 +23,7 @@
               - --class
               - org.apache.spark.examples.SparkPi
               - --master                                        
-              - armada://192.168.1.167:50051                    
+              - armada://armada-server.armada.svc.cluster.local:50051
               - --conf
               - "spark.driver.port=7078"
               - --conf
