--- a/resource-managers/armada/core/pom.xml
+++ b/resource-managers/armada/core/pom.xml
@@ -94,6 +94,12 @@
     </dependency>
 
     <dependency>
+      <groupId>io.armadaproject.armada</groupId>
+      <artifactId>scala-armada-client_2.13</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
