--- a/resource-managers/armada/core/pom.xml
+++ b/resource-managers/armada/core/pom.xml
@@ -94,9 +94,9 @@
     </dependency>
 
     <dependency>
-      <groupId>io.armadaproject.armada</groupId>
-      <artifactId>scala-armada-client_2.13</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+        <groupId>io.armadaproject.armada</groupId>
+        <artifactId>scala-armada-client_${scala.binary.version}</artifactId>
+        <version>0.1.0-SNAPSHOT</version> <!-- TODO: Actually pin to a "real" release of this client -->
     </dependency>
 
     <dependency>
